--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -9,28 +9,8 @@
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/user/login.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <body>
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <div class="col-md-3 mb-2 mb-md-0">
-        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-            <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-        </a>
-    </div>
-
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="/product" class="nav-link px-2">상품 보기</a></li>
-        <li><a href="#" class="nav-link px-2">2</a></li>
-        <li><a href="#" class="nav-link px-2">3</a></li>
-        <li><a href="#" class="nav-link px-2">4</a></li>
-    </ul>
-
-    <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/login';">로그인</button>
-        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/register';">회원가입</button>
-    </div>
-</header>
+{{> common/navbar }}
 <div>
     <form id="loginForm" action="/api/user/login" method="post" onsubmit="return validateForm()">
         <label for="loginId">아이디</label><br>
@@ -53,6 +33,5 @@
     <button onclick="window.location.href='/user/find-password';">비밀번호 찾기</button>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
