--- a/src/main/resources/templates/cart/cart_list.html
+++ b/src/main/resources/templates/cart/cart_list.html
@@ -46,7 +46,7 @@
         </div>
         <div id="total-price"></div>
         <!-- 결제 진행 버튼 -->
-        <button class="btn btn-success" onclick="orderRegister();">주문 신청</button>
+        <button class="btn btn-success mt-1" onclick="orderRegister();">주문 신청</button>
     </div>
 </div>
 
