--- a/src/main/resources/templates/order/order_list.html
+++ b/src/main/resources/templates/order/order_list.html
@@ -11,6 +11,8 @@
 <div class="container mt-4">
     <h2 class="text-center mb-4">주문 내역</h2>
     <!-- Order List -->
-    <div id="order-list">
+    <div id="order-list"></div>
+    <div id="order-summary"></div>
+</div>
 </body>
 </html>
