--- a/src/main/resources/templates/admin/order/order_list_admin.html
+++ b/src/main/resources/templates/admin/order/order_list_admin.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>주문 관리</title>
+    <style>
+        #orderPagination {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: white;
+            padding: 10px 20px;
+            box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/admin/order/orderListAdmin.js"></script>
