--- a/src/main/resources/templates/admin/order/order_list_admin.html
+++ b/src/main/resources/templates/admin/order/order_list_admin.html
@@ -23,6 +23,17 @@
 {{> common/sidebar }}
 <div class="container mt-5">
     <h1 class="text-center mb-4">주문 관리</h1>
+    <!-- 정렬 버튼들 -->
+    <div class="col-md-auto d-flex justify-content-start">
+        <label for="sort" class="form-label me-2"></label>
+        <select id="sort" class="form-select w-auto">
+            <option value="orderId">상품 ID</option>
+        </select>
+        <div class="btn-group" role="group">
+            <button id="ascBtn" class="btn btn-outline-secondary" value="asc">오름차순</button>
+            <button id="descBtn" class="btn btn-outline-secondary" value="desc">내림차순</button>
+        </div>
+    </div>
     <!-- 주문 목록을 출력할 영역 -->
     <div id="orderList"></div>
     <!-- 페이징 영역 -->
