--- a/src/main/resources/templates/admin/order/order_list_admin.html
+++ b/src/main/resources/templates/admin/order/order_list_admin.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <title>주문 관리</title>
     <style>
+        #header-container {
+            position: fixed;
+            top: 10px;
+            left: 50%;
+            padding: 10px 20px;
+            width: fit-content;
+        }
+        #content-container {
+            margin-top: 100px; /* 제목과 정렬 버튼의 높이만큼 여백 추가 */
+        }
         #orderPagination {
             position: fixed;
             bottom: 20px;
@@ -22,22 +32,24 @@
 <body>
 {{> common/sidebar }}
 <div class="container mt-5">
-    <h1 class="text-center mb-4">주문 관리</h1>
-    <!-- 정렬 버튼들 -->
-    <div class="col-md-auto d-flex justify-content-start">
-        <label for="sort" class="form-label me-2"></label>
-        <select id="sort" class="form-select w-auto">
-            <option value="orderId">상품 ID</option>
-        </select>
-        <div class="btn-group" role="group">
-            <button id="ascBtn" class="btn btn-outline-secondary" value="asc">오름차순</button>
-            <button id="descBtn" class="btn btn-outline-secondary" value="desc">내림차순</button>
-        </div>
+    <div id="header-container" class="text-center">
+        <h1>주문 관리</h1>
     </div>
-    <!-- 주문 목록을 출력할 영역 -->
-    <div id="orderList"></div>
-    <!-- 페이징 영역 -->
-    <div id="orderPagination" class="d-flex justify-content-center my-4 ml-1"></div>
+    <!-- 본문 내용 -->
+    <div id="content-container">
+        <div class="col-md-auto d-flex justify-content-start mb-4">
+            <label for="sort" class="form-label me-2"></label>
+            <select id="sort" class="form-select w-auto">
+                <option value="orderId">상품 ID</option>
+            </select>
+            <div class="btn-group" role="group">
+                <button id="ascBtn" class="btn btn-outline-secondary" value="asc">오름차순</button>
+                <button id="descBtn" class="btn btn-outline-secondary" value="desc">내림차순</button>
+            </div>
+        </div>
+        <div id="orderList"></div>
+        <div id="orderPagination" class="d-flex justify-content-center my-4 ml-1"></div>
+    </div>
 </div>
 </body>
 </html>
