--- a/src/main/resources/templates/admin/user/all_users.html
+++ b/src/main/resources/templates/admin/user/all_users.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <title>모든 회원 조회 목록</title>
     <style>
+        html, body {
+            width: 100%; /* 페이지 전체 폭 차지 */
+            height: 100%; /* 페이지 전체 높이 차지 */
+            margin: 0; /* 기본 margin 제거 */
+            padding: 0; /* 기본 padding 제거 */
+        }
+        #container {
+            margin-left: 50px;
+            margin-right: 0;
+            flex-grow: 1;
+            overflow-y: auto; /* 내용이 넘치면 스크롤 */
+        }
         #header-container {
-            position: fixed;
             top: 10px;
             left: 50%;
             padding: 10px 20px;
             width: fit-content;
-        }
-        #section-container{
-            height: 100%;
-            overflow-y: auto; /* 세로 스크롤 */
-            padding-right: 300px;;
         }
     </style>
 </head>
@@ -22,12 +28,12 @@
 <script src="/js/admin/user/allUsers.js"></script>
 <body>
 {{> common/sidebar }}
-<div class="container mt-5">
+<div id="container" class="container mt-5">
     <div id="header-container" class="text-center">
         <h1>모든 회원 관리</h1>
     </div>
     <div id="section-container">
-        <div class="select-container mt-5" style="overflow-y: auto">
+        <div class="select-container mt-3 mb-5">
             <label for="findName">검색할 회원의 이름</label><br>
             <input type="text" id="findName" name="findName"><br>
             <input type="submit" value="조회" onclick="$.showUser()">
