--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -41,16 +41,9 @@
             </div>
         </li>
         <li class="mb-1">
-            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed text-white" data-bs-toggle="collapse" data-bs-target="#user-collapse">
+            <a href="/admin/user/all-users" class="nav-link text-white">
                 회원 관리
-            </button>
-            <div class="collapse" id="user-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li style="margin-left: 30px;"><a href="/admin/user/all-users" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">모든 회원 보기</a></li>
-                    <li style="margin-left: 30px;"><a href="/admin/product-add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">1</a></li>
-                    <li style="margin-left: 30px;"><a href="/admin/product-modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">2</a></li>
-                </ul>
-            </div>
+            </a>
         </li>
     </ul>
     <hr>
