--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -18,8 +18,14 @@
         {{#login_user}}
         <span class="me-3">{{name}}님, 환영합니다!</span>
         <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/logout';">로그아웃</button>
+        {{#isAdmin}}
+        <button type="button" class="btn btn-danger me-2" onclick="window.location.href='/admin/home';">관리자 페이지</button>
+        {{/isAdmin}}
+        {{^isAdmin}}
         <button type="button" class="btn btn-outline-primary" onclick="window.location.href='/user/change-password';">비밀번호 변경</button>
         <button type="button" class="btn btn-outline-primary" onclick="window.location.href='/user/mypage';">마이 페이지</button>
+        {{/isAdmin}}
+
         {{/login_user}}
 
         {{^login_user}}
