--- a/src/main/resources/templates/order/order_list.html
+++ b/src/main/resources/templates/order/order_list.html
@@ -9,7 +9,8 @@
 <body>
 {{> common/navbar }}
 <div class="container mt-4">
-    <h2 class="text-center mb-4">주문 내역</h2>
+    <h2 class="text-center mb-1">주문 내역</h2>
+    <p id="notice"></p>
     <!-- 정렬 버튼 추가 -->
     <div class="d-flex align-items-center mb-3">
         <span class="sort-label me-2" style="font-weight: bold; font-size: 24px">주문번호 정렬</span>
