--- a/src/main/resources/templates/support/support_list.html
+++ b/src/main/resources/templates/support/support_list.html
@@ -43,7 +43,7 @@
 
     <!-- 게시글 작성 버튼 -->
     <div class="text-center mt-3">
-        <a href="" class="btn btn-primary">새 게시글 작성</a>
+        <a href="/support/register" class="btn btn-primary">새 게시글 작성</a>
     </div>
 
     <!-- 페이지네이션 -->
