--- a/src/main/resources/templates/support/support_register.html
+++ b/src/main/resources/templates/support/support_register.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- 등록 버튼 -->
-    <button class="btn btn-primary" onclick="boardRegist();">등록</button>
+    <button class="btn btn-primary" onclick="boardRegister();">등록</button>
 </div>
 </body>
 </html>
