--- a/src/main/resources/templates/support/support_view.html
+++ b/src/main/resources/templates/support/support_view.html
@@ -7,20 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>게시글 상세 보기</title>
 </head>
+
+<script src="/js/jquery-3.7.1.min.js"></script>
+<script src="/js/support/supportView.js"></script>
 <body>
 {{> common/navbar}} <!-- 네비게이션바 포함 -->
 
 <div class="container mt-5">
-    <h2 id="board-title" class="mb-3"></h2>
-
-    <div class="card">
-        <div class="card-body">
-            <p><strong>작성자:</strong> <span id="board-author"></span></p>
-            <p><strong>조회수:</strong> <span id="board-viewQty"></span></p>
-            <p><strong>작성일:</strong> <span id="board-createdDate"></span></p>
-            <!-- 게시글 내용 -->
-            <div id="board-content" class="mt-3"></div>
-        </div>
+    <div id="board-detail" class="mt-3">
+        <!-- 게시글 상세정보 렌더링 -->
     </div>
 
     <div class="mt-3">
