--- a/src/main/resources/templates/support/support_view.html
+++ b/src/main/resources/templates/support/support_view.html
@@ -7,19 +7,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>게시글 상세 보기</title>
 </head>
-
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/support/supportView.js"></script>
+<script src="/js/support/supportComment.js"></script>
 <body>
 {{> common/navbar}} <!-- 네비게이션바 포함 -->
-
 <div class="container mt-5">
     <div id="board-detail" class="mt-3">
         <!-- 게시글 상세정보 렌더링 -->
     </div>
-
     <div class="mt-3">
         <a href="/support/list" class="btn btn-outline-secondary">목록으로</a>
+    </div>
+    <div class="mt-5">
+        <h5>댓글</h5>
+        <div id="comments-section">
+            <!-- 댓글 목록 렌더링 -->
+        </div>
+        <div id="pagination">
+            <!-- 댓글 페이징 -->
+        </div>
+        <div class="mt-4">
+            <h6>댓글 작성</h6>
+            <div class="mb-1">
+                <label for="author_name"></label>
+                <input type="text" class="form-control" id="author_name" name="author_name" placeholder="작성자 이름" required>
+            </div>
+            <div class="mb-1">
+                <label for="comment_content"></label>
+                <textarea class="form-control" id="comment_content" name="comment_content" placeholder="댓글을 작성하세요" required></textarea>
+            </div>
+            <button class="btn btn-primary" onclick="commentRegister()">댓글 작성</button>
+        </div>
     </div>
 </div>
 </body>
